--- a/README
+++ b/README
@@ -91,8 +91,8 @@ Resources
 5.  `Install`_
 
 
-.. _Changelog: ChangeLog.html
-.. _License: LICENSE.html
-.. _Contributing: CONTRIBUTING.html
-.. _Authors: AUTHORS.html
-.. _Install: INSTALL.html
+.. _Changelog: ChangeLog
+.. _License: LICENSE
+.. _Contributing: CONTRIBUTING.rst
+.. _Authors: AUTHORS
+.. _Install: INSTALL
